# kanbanrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: document_layout.rs  main.rs
src/kanban/: category_editor.rs  editor.rs  filter.rs  focused_layout.rs  mod.rs  node_layout.rs  priority_editor.rs  sorting.rs  time_tracking.rs  tree_outline_layout.rs  undo.rs
wix/: main.wxs
