[package]
name = "kanbanrs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
rfd = "0.14.1"
xdg = "~2.5.0"

[profile.small_as_can_be]
inherits = "release"
# strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
