[package]
name = "kanbanrs"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/epsilon-phase/kanbanrs/"
authors = ["Violet White"]
description = "A basic kanban task manager written with egui"
homepage = "https://github.com/epsilon-phase/kanbanrs/"
license = 'MIT'

[package.metadata.wix]
upgrade-guid = "08F7518F-464F-44FF-A58D-1E48F52F59DA"
path-guid = "1E655838-3829-48A6-9F58-DCA6D556746F"
license = false
eula = false

[dependencies]
eframe = "0.29.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
rfd = { version = "0.14.1" }
nucleo-matcher = { version = "0.3.1" }
layout-rs = "0.1.2"
clap = { version = "4.5.19", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
xdg = "~2.5.0"


[profile.small_as_can_be]
inherits = "release"
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
